# blogapp-django

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/static/js/: scripts.js
blog/templates/: base.html  footer.html  home.html  navbar.html  view_post.html
blogapp_project/: asgi.py  settings.py  urls.py  wsgi.py
fixtures/: posts.json
